# lmdb

libraries/liblmdb/: CMakeLists.txt  mdb.c  unistd.h
libraries/liblmdb/cmake/: package-config.cmakein
